2007-11-12  Martin Hunt  <hunt@redhat.com>
	 
	* systemtap.base/*.stp: Replace log() calls with
	println() (or printf() if formatting would help.)
	* systemtap.maps/*.stp: Ditto.
	* systemtap.samples/*.stp: Ditto.	
	* systemtap.stress/*.stp: Ditto.		

2007-11-09  Masami Hiramatsu  <mhiramat@redhat.com>

	PR3858
	* systemtap.printf/sharedbuf.exp: New test for buffer sharing option.
	* systemtap.printf/sharedbuf.stp: Ditto.
	* systemtap.printf/hello.stp: Ditto.
	* systemtap.printf/hello2.stp: Ditto.

2007-10-25  Martin Hunt  <hunt@redhat.com>

	* systemtap.printf/printd.exp: New.
	Runs printd.stp and printdln.stp.
	* systemtap.printf/printdln.stp: Removed bad tests.	
	* systemtap.printf/printd.stp: Ditto.

2007-10-25  Martin Hunt  <hunt@redhat.com>
	
	* systemtap.printf/print_char.*: New test. 
	* systemtap.printf/print.*: New test.
	* systemtap.printf/println.*: New test.
	
	* systemtap.maps/elision.*: New tests.

	* config/unix.exp: Added stap_run_exact.
	* lib/stap_run_exact.exp: New. Like stap_run2 but
	takes a seperate test name. 

2007-10-25  Martin Hunt  <hunt@redhat.com>
	
	* systemtap.printf/printd.stp: New
	* systemtap.printf/printdln.stp: New	

2007-10-16  Martin Hunt  <hunt@redhat.com>

	PR 5000
	* systemtap.printf/bin3.stp. Removed.
	* systemtap.printf/bin3a.stp. Renamed bin3.stp.	
	* systemtap.printf/bin4.stp. Removed.
	* systemtap.printf/bin4a.stp. Renamed bin4.stp.	
	* systemtap.printf/bin5.stp. Removed.
	* systemtap.printf/bin5a.stp. Renamed bin5.stp.	
	* systemtap.printf/bin3.exp: Don't run bin3a.stp.	
	* systemtap.printf/bin4.exp: Don't run bin4a.stp.
	* systemtap.printf/bin5.exp: Don't run bin5a.stp.

	Increase reliability under loads.
	* systemtap.samples/pfaults.exp: Increase MAXACTION.
	* systemtap.context/backtrace.tcl: Handle just
	a single userspace address.

2007-10-05  Frank Ch. Eigler  <fche@elastic.org>

	PR 1119.
	* systemtap.base/warnings.*: New test.

2007-10-05  Martin Hunt  <hunt@redhat.com>
